[package]
name = "ipzone"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
version = "0.4.0"
edition = "2021"
categories = ["network-programming", "data-structures", "rust-patterns"]
keywords = ["ip", "network", "address", "net", "addr"]
description = "Ipzone provides a simple and powerful IP architecture to Rust."
homepage = "https://github.com/just-do-halee/ipzone"
repository = "https://github.com/just-do-halee/ipzone.git"
documentation = "https://docs.rs/ipzone"
license = "MIT OR Apache-2.0"
readme = "README.md"

exclude = [".gitignore", ".github/"]

[dependencies]
once_cell = "1.16"
thiserror = "1.0"

[dev-dependencies]
